--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.10.5",
+    "ahooks": "^3.7.1",
+    "classnames": "^2.3.2",
+    "ethers": "^5.7.1",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.6.6"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
