--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.31.0",
     "wagmi": "^0.6.6"
   },
   "devDependencies": {
