--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "ethers": "^5.7.1",
     "next": "12.3.0",
+    "next-intl": "^2.7.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.0",
