--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.7.1",
     "next": "12.3.0",
     "next-intl": "^2.7.6",
+    "rc-progress": "^3.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.0",
