--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "ahooks": "^3.7.1",
     "classnames": "^2.3.2",
     "ethers": "^5.7.1",
+    "gray-matter": "^4.0.3",
     "next": "12.3.0",
     "next-intl": "^2.7.6",
     "rc-progress": "^3.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "sharp": "^0.31.0",
     "wagmi": "^0.6.6"
   },
