--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "ethers": "^5.7.1",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "next": "12.3.0",
     "next-intl": "^2.7.6",
     "rc-progress": "^3.4.0",
@@ -28,6 +29,7 @@
     "wagmi": "^0.6.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
