--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "next": "12.3.0",
     "next-intl": "^2.7.6",
+    "qs": "^6.11.0",
     "rc-progress": "^3.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.186",
     "@types/node": "18.7.18",
+    "@types/qs": "^6.9.7",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
