--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.5",
+    "@vercel/analytics": "^0.1.1",
     "ahooks": "^3.7.1",
     "classnames": "^2.3.2",
     "ethers": "^5.7.1",
