--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qs": "^6.11.0",
     "rc-progress": "^3.4.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
@@ -35,6 +36,7 @@
     "@types/node": "18.7.18",
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.20",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
