feat: add profile mobile ui

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^5.7.1",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
+    "moralis": "^2.7.0",
     "next": "12.3.0",
     "next-intl": "^2.7.6",
     "qs": "^6.11.0",
