--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
@@ -17,6 +18,7 @@
     "ahooks": "^3.7.1",
     "classnames": "^2.3.2",
     "ethers": "^5.7.1",
+    "graphql": "^16.6.0",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "moralis": "^2.7.0",
