--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sharp": "^0.31.0",
