--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moralis": "^2.7.0",
     "next": "12.3.0",
     "next-intl": "^2.7.6",
+    "next-query-params": "^4.0.0",
     "qs": "^6.11.0",
     "rc-progress": "^3.4.0",
     "react": "18.2.0",
@@ -33,6 +34,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sharp": "^0.31.0",
+    "use-query-params": "^2.1.2",
     "wagmi": "^0.6.6"
   },
   "devDependencies": {
