--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-toastify": "^9.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
@@ -45,6 +46,7 @@
     "@types/react": "18.0.20",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
+    "@types/react-gtm-module": "^2.0.1",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "sass": "^1.54.9",
