--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-markdown": "^8.0.3",
     "react-toastify": "^9.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
