--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-intl": "^2.7.6",
     "next-query-params": "^4.0.0",
     "qs": "^6.11.0",
+    "rc-image": "^5.12.1",
     "rc-progress": "^3.4.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
