--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-markdown": "^8.0.3",
+    "react-qr-code": "^2.0.11",
     "react-toastify": "^9.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
