--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@metamask/detect-provider": "^2.0.0",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.5",
+    "@types/react-slick": "^0.23.10",
     "@unipasswallet/popup-sdk": "^0.0.13",
     "@vercel/analytics": "^0.1.1",
     "@zeit/next-css": "^1.0.1",
@@ -25,6 +26,7 @@
     "ethers": "^5.7.1",
     "graphql": "^16.6.0",
     "gray-matter": "^4.0.3",
+    "jquery": "^3.6.3",
     "lodash": "^4.17.21",
     "moralis": "^2.7.0",
     "next": "12.3.0",
@@ -39,6 +41,7 @@
     "react-gtm-module": "^2.0.11",
     "react-markdown": "^8.0.3",
     "react-qr-code": "^2.0.11",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
@@ -57,6 +60,7 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "sass": "^1.54.9",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.8.3"
   }
 }
