--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-qr-code": "^2.0.11",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "react-twitter-embed": "^4.0.4",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sharp": "^0.31.0",
