--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "react-markdown": "^8.0.3",
     "react-qr-code": "^2.0.11",
     "react-slick": "^0.29.0",
+    "react-sticky-box": "^2.0.0",
     "react-toastify": "^9.1.1",
     "react-twitter-embed": "^4.0.4",
     "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
     "sharp": "^0.31.0",
     "use-query-params": "^2.1.2",
