--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-slick": "^0.23.10",
     "@unipasswallet/popup-sdk": "^0.0.13",
     "@vercel/analytics": "^0.1.1",
+    "@wagmi/core": "^0.10.8",
     "@zeit/next-css": "^1.0.1",
     "ahooks": "^3.7.1",
     "antd": "^5.1.7",
@@ -50,7 +51,7 @@
     "remark-html": "^15.0.1",
     "sharp": "^0.31.0",
     "use-query-params": "^2.1.2",
-    "wagmi": "^0.6.6"
+    "wagmi": "^0.12.9"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
