feat: support photo upload in verify form

--- a/.env-example
+++ b/.env-example
@@ -6,3 +6,8 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS=xxxxx
 NEXT_PUBLIC_GOOGLE_TAGMANAGER=xxxxx
 
 NEXT_PUBLIC_CMS_TOKEN=xxxxxx
+
+NEXT_PUBLIC_AWS_ACCESS_KEY_ID=xxxxxxx
+NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=xxxxx
+NEXT_PUBLIC_REGION=xxxxx
+NEXT_PUBLIC_BUCKET=xxxxxx
