--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@aws-sdk/client-s3": "^3.316.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@homielab/react-native-auto-scroll": "^0.0.8",
@@ -24,6 +25,7 @@
     "ahooks": "^3.7.1",
     "antd": "^5.1.7",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.1.1",
     "ethers": "^5.7.1",
     "graphql": "^16.6.0",
     "gray-matter": "^4.0.3",
@@ -43,6 +45,7 @@
     "react-markdown": "^8.0.3",
     "react-photo-view": "^1.2.3",
     "react-qr-code": "^2.0.11",
+    "react-s3": "^1.3.1",
     "react-slick": "^0.29.0",
     "react-sticky-box": "^2.0.0",
     "react-toastify": "^9.1.1",
@@ -51,10 +54,12 @@
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
     "sharp": "^0.31.0",
+    "spark-md5": "^3.0.2",
     "use-query-params": "^2.1.2",
     "wagmi": "^0.12.9"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.7.18",
     "@types/qs": "^6.9.7",
@@ -62,6 +67,7 @@
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
     "@types/react-gtm-module": "^2.0.1",
+    "@types/spark-md5": "^3.0.2",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "sass": "^1.54.9",
