--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "@unipasswallet/popup-sdk": "^0.0.13",
     "@vercel/analytics": "^0.1.1",
     "@wagmi/core": "^0.10.8",
+    "@web3auth/base": "^5.1.0",
+    "@web3auth/core": "^4.6.0",
+    "@web3auth/modal": "^5.1.1",
+    "@web3auth/openlogin-adapter": "^5.1.1",
+    "@web3auth/torus-wallet-connector-plugin": "^5.1.0",
+    "@web3auth/web3auth-wagmi-connector": "^3.0.1",
     "@zeit/next-css": "^1.0.1",
     "ahooks": "^3.7.1",
     "antd": "^5.1.7",
