--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gray-matter": "^4.0.3",
     "jquery": "^3.6.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "moralis": "^2.7.0",
     "next": "12.3.0",
     "next-intl": "^2.7.6",
